cloudformation/jambonz-only.yaml
---
AWSTemplateFormatVersion: "2010-09-09"
Description: "Jambonz only formation script. For Blue/Green deployment VPC & Data Layer are already in place. The majority of options handled by AWS SSM Parameters."

Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      -
        Label:
          default: "Cluster Configuration"
        Parameters:
          - Prefix
      -
        Label:
          default: "Network Configuration"
        Parameters:
          - VPC
          - VpcCIDR
          - PublicSubnet1CIDR
          - PublicSubnet2CIDR
      -
        Label:
          default: "Security Configuration"
        Parameters:
          - KeyName
          - AllowedSshCidr
          - AllowedHttpCidr
          - AllowedSipCidr
          - AllowedSmppCidr
          - AllowedRtpCidr
      - Label:
          default: "Instance Images"
        Parameters:
          - FeatureServerAmi
          - SipServerAmi
          - RtpServerAmi
          - WebServerAmi
          - MonitorServerAmi
      - Label:
          default: "Instance Types"
        Parameters:
          - InstanceTypeWebserver
          - InstanceTypeFeatureServer
          - InstanceTypeMonitoringServer
          - InstanceTypeSbcRtp
          - InstanceTypeSbcSip
      - Label:
          default: "Data Layer"
        Parameters:
          - MySQLURL
          - MySQLUsername
          - MySQLPassword
          - RedisURL
    ParameterLabels:
      Prefix:
        default: "Cluster Prefix"
      VPC:
        default: "VPC Prefix"
      AllowedSshCidr:
        default: "SSH Allowed Network"
      AllowedHttpCidr:
        default: "HTTP Allowed Network"
      AllowedSipCidr:
        default: "SIP Allowed Network"
      AllowedSmppCidr:
        default: "SMPP Allowed Network"
      AllowedRtpCidr:
        default: "RTP Allowed Network"

Parameters:

  Prefix:
    Description: "Deployment Prefix - Choose Parameter a or b"
    Type: AWS::SSM::Parameter::Value<String>
    Default: "jb.deployment.a"

  VPC:
    Description: "VPC Id"
    Type: AWS::SSM::Parameter::Value<String>
    Default: jb.vpc.id

  VpcCIDR:
    Description: "The CIDR block for the whole VPC"
    Type: AWS::SSM::Parameter::Value<String>
    Default: jb.vpc.cidr

  PublicSubnet1CIDR:
    Description: "Please enter the IP range (CIDR notation) for the public subnet in the first Availability Zone"
    Type: AWS::SSM::Parameter::Value<String>
    Default: jb.vpc.subnet.1

  PublicSubnet2CIDR:
    Description: "Please enter the IP range (CIDR notation) for the public subnet in the second Availability Zone"
    Type: AWS::SSM::Parameter::Value<String>
    Default: jb.vpc.subnet.2

  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: AWS::SSM::Parameter::Value<String>
    Default: jb.keyname

  AllowedSshCidr:
    Description: Please set CIDR to x.x.x.x/32 to allow one specific IP address ssh access, 0.0.0.0/0 to allow all IP addresses access, or another CIDR range.
    Type: String
    AllowedPattern: \d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}\/\d{1,2}
    ConstraintDescription: must be a valid network CIDR
    Default: 0.0.0.0/0

  AllowedHttpCidr:
    Description: Please set CIDR to x.x.x.x/32 to allow one specific IP address http(s) access, 0.0.0.0/0 to allow all IP addresses access, or another CIDR range.
    Type: String
    AllowedPattern: \d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}\/\d{1,2}
    ConstraintDescription: must be a valid network CIDR
    Default: 0.0.0.0/0

  AllowedSipCidr:
    Description: Please set CIDR to x.x.x.x/32 to allow one specific IP address sip access, 0.0.0.0/0 to allow all IP addresses access, or another CIDR range.
    Type: String
    ConstraintDescription: must be a valid network CIDR
    AllowedPattern: \d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}\/\d{1,2}
    Default: 0.0.0.0/0

  AllowedSmppCidr:
    Description: Please set CIDR to x.x.x.x/32 to allow one specific IP address smpp access, 0.0.0.0/0 to allow all IP addresses access, or another CIDR range.
    Type: String
    ConstraintDescription: must be a valid network CIDR
    AllowedPattern: \d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}\/\d{1,2}
    Default: 0.0.0.0/0

  AllowedRtpCidr:
    Description: Please set CIDR to x.x.x.x/32 to allow one specific IP address to send RTP traffic, 0.0.0.0/0 to allow all IP addresses access, or another CIDR range.
    Type: String
    ConstraintDescription: must be a valid network CIDR
    AllowedPattern: \d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}\/\d{1,2}
    Default: 0.0.0.0/0

  InstanceTypeSbcSip:
    Description: "the EC2 instance type for the SBC SIP server"
    Type: String
    Default: c5n.xlarge
    AllowedValues:
      - t2.small
      - t2.medium
      - t2.large
      - t2.xlarge
      - t2.2xlarge
      - t3.small
      - t3.medium
      - t3.large
      - t3.xlarge
      - t3.2xlarge
      - c5n.large
      - c5n.xlarge
      - c5n.2xlarge
      - c5n.4xlarge
      - c5n.9xlarge
      - c5n.18xlarge
      - c5n.metal

  InstanceTypeSbcRtp:
    Description: "the EC2 instance type to use for the SBC Media server"
    Type: String
    Default: c5n.xlarge
    AllowedValues:
      - t2.small
      - t2.medium
      - t2.large
      - t2.xlarge
      - t2.2xlarge
      - t3.small
      - t3.medium
      - t3.large
      - t3.xlarge
      - t3.2xlarge
      - c5n.large
      - c5n.xlarge
      - c5n.2xlarge
      - c5n.4xlarge
      - c5n.9xlarge
      - c5n.18xlarge
      - c5n.metal

  InstanceTypeFeatureServer:
    Description: "the EC2 instance type to use for the Feature Server"
    Type: String
    Default: c5n.xlarge
    AllowedValues:
      - t2.small
      - t2.medium
      - t2.large
      - t2.xlarge
      - t2.2xlarge
      - t3.small
      - t3.medium
      - t3.large
      - t3.xlarge
      - t3.2xlarge
      - c5n.large
      - c5n.xlarge
      - c5n.2xlarge
      - c5n.4xlarge
      - c5n.9xlarge
      - c5n.18xlarge
      - c5n.metal

  InstanceTypeWebserver:
    Description: "the EC2 instance type to use for webServer"
    Type: String
    Default: t3.medium
    AllowedValues:
      - t2.small
      - t2.medium
      - t2.large
      - t2.xlarge
      - t2.2xlarge
      - t3.small
      - t3.medium
      - t3.large
      - t3.xlarge
      - t3.2xlarge
      - c5n.large
      - c5n.xlarge
      - c5n.2xlarge
      - c5n.4xlarge
      - c5n.9xlarge
      - c5n.18xlarge
      - c5n.metal

  InstanceTypeMonitoringServer:
    Description: "the EC2 instance type for the monitoring server"
    Type: String
    Default: t3.medium
    AllowedValues:
      - t2.small
      - t2.medium
      - t2.large
      - t2.xlarge
      - t2.2xlarge
      - t3.small
      - t3.medium
      - t3.large
      - t3.xlarge
      - t3.2xlarge
      - c5n.large
      - c5n.xlarge
      - c5n.2xlarge
      - c5n.4xlarge
      - c5n.9xlarge
      - c5n.18xlarge
      - c5n.metal

  FeatureServerAmi:
    Description: "Feature Server AMI"
    Type: AWS::SSM::Parameter::Value<String>
    Default: jb.ami.fs

  SipServerAmi:
    Description: "SBC Server AMI"
    Type: AWS::SSM::Parameter::Value<String>
    Default: jb.ami.sip

  RtpServerAmi:
    Description: "RTP Server AMI"
    Type: AWS::SSM::Parameter::Value<String>
    Default: jb.ami.rtp

  WebServerAmi:
    Description: "WebServer AMI"
    Type: AWS::SSM::Parameter::Value<String>
    Default: jb.ami.web

  MonitorServerAmi:
    Description: "Monitoring Server AMI"
    Type: AWS::SSM::Parameter::Value<String>
    Default: jb.ami.mon

  MySQLURL:
    Description: 'The database URL'
    Type: AWS::SSM::Parameter::Value<String>
    Default: jb.db.url

  MySQLUsername:
    Description: 'the database username'
    Type: AWS::SSM::Parameter::Value<String>
    Default: jb.db.username

  MySQLPassword:
    #      NoEcho: true
    Description: 'the database password'
    Type: AWS::SSM::Parameter::Value<String>
    Default: jb.db.password

  RedisURL:
    Description: 'The cache URL'
    Type: AWS::SSM::Parameter::Value<String>
    Default: jb.cache.url

  EncryptionSecret:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: AWS::SSM::Parameter::Value<String>
    Default: jb.secret


Resources:

  ###########################################
  #
  #      SECURITY GROUPS
  #
  ###########################################
  SshSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub '${Prefix}-jambonz-ssh-sg'
      GroupDescription: !Sub 'Security group for ssh to ${Prefix} jambonz cluster'
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref AllowedSshCidr
          Description: Allow SSH access

  FeatureServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub '${Prefix}-feature-server-sg'
      GroupDescription: !Sub 'Security group for ${Prefix} Feature Server'
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3000
          ToPort: 3000
          CidrIp: !Ref VpcCIDR
          Description: Allow HTTP from sbc/api server
        - IpProtocol: tcp
          FromPort: 3001
          ToPort: 3001
          CidrIp: !Ref AllowedHttpCidr
          Description: Allow http access from AWS SNS
        - IpProtocol: tcp
          FromPort: 5060
          ToPort: 5060
          CidrIp: !Ref VpcCIDR
          Description: Allow sip from VPC
        - IpProtocol: udp
          FromPort: 5060
          ToPort: 5060
          CidrIp: !Ref VpcCIDR
          Description: Allow sip from VPC
        - IpProtocol: tcp
          FromPort: 5080
          ToPort: 5080
          CidrIp: !Ref VpcCIDR
          Description: Allow freeswitch sip from VPC
        - IpProtocol: udp
          FromPort: 5080
          ToPort: 5080
          CidrIp: !Ref VpcCIDR
          Description: Allow freeswitch sip from VPC
        - IpProtocol: udp
          FromPort: 25000
          ToPort: 40000
          CidrIp: !Ref VpcCIDR
          Description: rtp
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 0
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub '${Prefix}-feature-server-sg'

  WebserverSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub '${Prefix}-webserver-sg'
      GroupDescription: !Sub 'Security group for ${Prefix} WebServer'
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: !Ref AllowedHttpCidr
          Description: Allow HTTP access
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !Ref AllowedHttpCidr
          Description: Allow HTTPS access
        - IpProtocol: tcp
          FromPort: 3000
          ToPort: 3000
          SourceSecurityGroupId: !Ref FeatureServerSecurityGroup
          Description: Allow HTTPS access
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 0
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub '${Prefix}-webserver-sg'

  SbcSipSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub '${Prefix}-sbc-sip-sg'
      GroupDescription: !Sub 'Security group for ${Prefix} Sbc Sip Server'
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3050
          ToPort: 3050
          CidrIp: "0.0.0.0/0"
        - IpProtocol: tcp
          FromPort: 5060
          ToPort: 5060
          CidrIp: !Ref VpcCIDR
          Description: Allow sip (tcp) from Internet
        - IpProtocol: udp
          FromPort: 5060
          ToPort: 5060
          CidrIp: !Ref AllowedSipCidr
          Description: Allow sip (udp) from Internet
        - IpProtocol: tcp
          FromPort: 5061
          ToPort: 5061
          CidrIp: '52.114.148.0/32'
          Description: sip (tls) for teams
        - IpProtocol: tcp
          FromPort: 5061
          ToPort: 5061
          CidrIp: '52.114.132.46/32'
          Description: sip (tls) for teams
        - IpProtocol: tcp
          FromPort: 5061
          ToPort: 5061
          CidrIp: '52.114.75.24/32'
          Description: sip (tls) for teams
        - IpProtocol: tcp
          FromPort: 5061
          ToPort: 5061
          CidrIp: '52.114.76.76/32'
          Description: sip (tls) for teams
        - IpProtocol: tcp
          FromPort: 5061
          ToPort: 5061
          CidrIp: '52.114.7.24/32'
          Description: sip (tls) for teams
        - IpProtocol: tcp
          FromPort: 5061
          ToPort: 5061
          CidrIp: '52.114.14.70/32'
          Description: sip (tls) for teams
        - IpProtocol: tcp
          FromPort: 4433
          ToPort: 4433
          CidrIp: !Ref AllowedSipCidr
          Description: Allow sip (wss) from Internet
        - IpProtocol: tcp
          FromPort: 2775
          ToPort: 2775
          CidrIp: !Ref AllowedSmppCidr
          Description: Allow SMPP/tcp from Internet
        - IpProtocol: tcp
          FromPort: 3550
          ToPort: 3550
          CidrIp: !Ref AllowedSmppCidr
          Description: Allow SMPP/tls from Internet
        - IpProtocol: tcp
          FromPort: 3020
          ToPort: 3020
          SourceSecurityGroupId: !Ref FeatureServerSecurityGroup
          Description: Allow HTTP access from VPC to jambonz-smpp-esme
        - IpProtocol: tcp
          FromPort: 9090
          ToPort: 9090
          CidrIp: !Ref VpcCIDR
          Description: Allow access to prometheus scrape port from VPC
        - IpProtocol: tcp
          FromPort: 3001
          ToPort: 3001
          CidrIp: '0.0.0.0/0'
          Description: Allow http access from AWS SNS
        - IpProtocol: udp
          FromPort: 22224
          ToPort: 22225
          CidrIp: !Ref VpcCIDR
          Description: Allow dtmf events from rtpengine-sidecard in the VPC
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 0
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub '${Prefix}-sbc-sip-sg'

  SbcRTPSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub '${Prefix}-spc-rtp-sg'
      GroupDescription: !Sub 'Security group for ${Prefix} sbc RTP'
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: udp
          FromPort: 40000
          ToPort: 60000
          CidrIp: !Ref AllowedRtpCidr
          Description: Allow RTP from everywhere
        - IpProtocol: udp
          FromPort: 5060
          ToPort: 5060
          CidrIp: !Ref VpcCIDR
          Description: Allow Freeswitch sip from VPC
        - IpProtocol: udp
          FromPort: 22222
          ToPort: 22222
          CidrIp: !Ref VpcCIDR
          Description: Allow rtpengine ng protocol from VPC
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: !Ref VpcCIDR
          Description: rtpengine ws protocol from VPC
        - IpProtocol: tcp
          FromPort: 3001
          ToPort: 3001
          CidrIp: !Ref AllowedHttpCidr
          Description: Allow http access from AWS SNS
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 0
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub '${Prefix}-spc-rtp-sg'

  MonitoringSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub '${Prefix}-monitoring-sg'
      GroupDescription: !Sub 'Security group for ${Prefix} Monitoring'
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3000
          ToPort: 3000
          CidrIp: !Ref AllowedHttpCidr
          Description: Allow grafana access
        - IpProtocol: tcp
          FromPort: 8086
          ToPort: 8086
          CidrIp: !Ref VpcCIDR
          Description: Allow influxdb access from VPC
        - IpProtocol: tcp
          FromPort: 8088
          ToPort: 8088
          CidrIp: !Ref VpcCIDR
          Description: Allow influxdb backup access from VPC
        - IpProtocol: tcp
          FromPort: 9080
          ToPort: 9080
          CidrIp: !Ref AllowedHttpCidr
          Description: Allow access to homer webapp
        - IpProtocol: udp
          FromPort: 9060
          ToPort: 9060
          CidrIp: !Ref VpcCIDR
          Description: Allow access to homer HEP
        - IpProtocol: tcp
          FromPort: 1880
          ToPort: 1880
          CidrIp: !Ref AllowedHttpCidr
          Description: Allow access to Node-RED
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 0
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub '${Prefix}-monitoring-sg'

    ###########################################
    #                                         #
    #      Monitoring Instance                #
    #                                         #
    ###########################################

  MonitoringServerEC2:
    Type: 'AWS::EC2::Instance'
    Properties:
      SubnetId: !Ref PublicSubnet1CIDR
      ImageId: !Ref MonitorServerAmi
      InstanceType: !Ref InstanceTypeMonitoringServer
      SecurityGroupIds:
        - Ref: SshSecurityGroup
        - Ref: MonitoringSecurityGroup
      KeyName: !Ref KeyName
      Monitoring: true
      Tags:
        -
          Key: Name
          Value: !Sub '${Prefix}-monitoring-server'


  ###########################################
  #      New SBC SIP instances
  ###########################################

  # --- SIP server EC2 IAM role
  SbcSipServerIamRole:
    Type: AWS::IAM::Role
    Properties:
      Description: SBC RTP EC2 service role
      RoleName: !Sub '${Prefix}-sbc-sip-ec2-role'
      AssumeRolePolicyDocument:
        Statement:
          - Effect: Allow
            Principal:
              Service: [ec2.amazonaws.com]
            Action: ['sts:AssumeRole']
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonSNSFullAccess
        - arn:aws:iam::aws:policy/AutoScalingReadOnlyAccess
        - arn:aws:iam::aws:policy/AmazonEC2FullAccess
        - arn:aws:iam::aws:policy/AmazonSSMFullAccess

  # --- SIP server EC2 Role Instance profile
  SbcSipServerInstanceProfile:
    Type: 'AWS::IAM::InstanceProfile'
    Properties:
      InstanceProfileName:  !Sub '${Prefix}-sbc-sip-ec2-role'
      Path: /
      Roles:
        - !Ref SbcSipServerIamRole

  SbcSipConfig:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      ImageId: !Ref SipServerAmi
      SecurityGroups:
        - Ref: SshSecurityGroup
        - Ref: SbcSipSecurityGroup
      InstanceType: !Ref InstanceTypeSbcSip
      IamInstanceProfile: !Ref SbcSipServerInstanceProfile
      KeyName: !Ref KeyName
      AssociatePublicIpAddress: true
      UserData:
        Fn::Base64:
          Fn::Sub:
            - |
              #!/bin/bash
              echo "running jambonz user data script"
              PRE_PUBLIC_IP=`curl -s http://169.254.169.254/latest/meta-data/public-ipv4`
              echo "before retrieving EIP for SIP server, public IP is $PRE_PUBLIC_IP"

              /usr/local/bin/auto-assign-elastic-ip.sh
              sleep 15

              PUBLIC_IP=`curl -s http://169.254.169.254/latest/meta-data/public-ipv4`
              echo "after retrieving EIP for SIP server, public IP is $PUBLIC_IP"

              echo "temporary express server for health check"
              sudo mkdir /home/admin/apps/health-check
              git clone https://github.com/ajukes/jambones-sbc-healthcheck.git /home/admin/apps/health-check
              cd /home/admin/apps/health-check && sudo npm install --unsafe-perm
              echo "finished writing health check app"

              echo "writing /home/admin/apps/ecosystem.config.js.."
              cat << EOF > /home/admin/apps/ecosystem.config.js
              module.exports = {
                apps : [
                {
                  name: 'jambonz-smpp-esme',
                  cwd: '/home/admin/apps/jambonz-smpp-esme',
                  script: 'app.js',
                  out_file: '/home/admin/.pm2/logs/jambonz-smpp-esme.log',
                  err_file: '/home/admin/.pm2/logs/jambonz-smpp-esme.log',
                  combine_logs: true,
                  instance_var: 'INSTANCE_ID',
                  exec_mode: 'fork',
                  instances: 1,
                  autorestart: true,
                  watch: false,
                  max_memory_restart: '1G',
                  env: {
                    NODE_ENV: 'production',
                    JAMBONES_LOGLEVEL: 'info',
                    JAMBONES_CLUSTER_ID: '${JAMBONES_CLUSTER_ID}',
                    AVOID_UDH: true,
                    JAMBONES_MYSQL_HOST: '${JAMBONES_MYSQL_HOST}',
                    JAMBONES_MYSQL_USER: '${JAMBONES_MYSQL_USER}',
                    JAMBONES_MYSQL_PASSWORD: '${JAMBONES_MYSQL_PASSWORD}',
                    JAMBONES_MYSQL_DATABASE: 'jambones',
                    JAMBONES_MYSQL_CONNECTION_LIMIT: 10,
                    JAMBONES_REDIS_HOST: '${JAMBONES_REDIS_HOST}',
                    JAMBONES_REDIS_PORT: 6379,
                    HTTP_PORT: 3020
                  }
                },
                {
                  name: 'sbc-options-handler',
                  cwd: '/home/admin/apps/sbc-options-handler',
                  script: 'app.js',
                  instance_var: 'INSTANCE_ID',
                  out_file: '/home/admin/.pm2/logs/jambonz-sbc-options-handler.log',
                  err_file: '/home/admin/.pm2/logs/jambonz-sbc-options-handler.log',
                  exec_mode: 'fork',
                  instances: 1,
                  autorestart: true,
                  watch: false,
                  max_memory_restart: '1G',
                  env: {
                    NODE_ENV: 'production',
                    JAMBONES_CLUSTER_ID: '${JAMBONES_CLUSTER_ID}',
                    JAMBONES_LOGLEVEL: 'info',
                    DRACHTIO_HOST: '127.0.0.1',
                    DRACHTIO_PORT: 9022,
                    DRACHTIO_SECRET: 'cymru',
                    JAMBONES_REDIS_HOST: '${JAMBONES_REDIS_HOST}',
                    JAMBONES_REDIS_PORT: 6379,
                    ENABLE_METRICS: 1,
                    STATS_HOST: '127.0.0.1',
                    STATS_PORT: 8125,
                    STATS_PROTOCOL: 'tcp',
                    STATS_TELEGRAF: 1,
                    JAMBONES_NETWORK_CIDR: '${VPC_CIDR}'
                  }
                },
                {
                  name: 'sbc-call-router',
                  cwd: '/home/admin/apps/sbc-call-router',
                  script: 'app.js',
                  instance_var: 'INSTANCE_ID',
                  out_file: '/home/admin/.pm2/logs/jambonz-sbc-call-router.log',
                  err_file: '/home/admin/.pm2/logs/jambonz-sbc-call-router.log',
                  exec_mode: 'fork',
                  instances: 1,
                  autorestart: true,
                  watch: false,
                  max_memory_restart: '1G',
                  env: {
                    NODE_ENV: 'production',
                    HTTP_PORT:  4000,
                    JAMBONES_INBOUND_ROUTE: '127.0.0.1:4002',
                    JAMBONES_OUTBOUND_ROUTE: '127.0.0.1:4003',
                    JAMBONZ_TAGGED_INBOUND: 1,
                    ENABLE_METRICS: 1,
                    STATS_HOST: '127.0.0.1',
                    STATS_PORT: 8125,
                    STATS_PROTOCOL: 'tcp',
                    STATS_TELEGRAF: 1,
                    JAMBONES_NETWORK_CIDR: '${VPC_CIDR}'
                  }
                },
                {
                  name: 'sbc-registrar',
                  cwd: '/home/admin/apps/sbc-registrar',
                  script: 'app.js',
                  instance_var: 'INSTANCE_ID',
                  out_file: '/home/admin/.pm2/logs/jambonz-sbc-registrar.log',
                  err_file: '/home/admin/.pm2/logs/jambonz-sbc-registrar.log',
                  exec_mode: 'fork',
                  instances: 1,
                  autorestart: true,
                  watch: false,
                  max_memory_restart: '1G',
                  env: {
                    NODE_ENV: 'production',
                    JAMBONES_LOGLEVEL: 'info',
                    RTPENGINE_PING_INTERVAL: 30000,
                    DRACHTIO_HOST: '127.0.0.1',
                    DRACHTIO_PORT: 9022,
                    DRACHTIO_SECRET: 'cymru',
                    JAMBONES_MYSQL_HOST: '${JAMBONES_MYSQL_HOST}',
                    JAMBONES_MYSQL_USER: '${JAMBONES_MYSQL_USER}',
                    JAMBONES_MYSQL_PASSWORD: '${JAMBONES_MYSQL_PASSWORD}',
                    JAMBONES_MYSQL_DATABASE: 'jambones',
                    JAMBONES_MYSQL_CONNECTION_LIMIT: 10,
                    JAMBONES_REDIS_HOST: '${JAMBONES_REDIS_HOST}',
                    JAMBONES_REDIS_PORT: 6379,
                    JAMBONES_TIME_SERIES_HOST: '${JAMBONES_TIME_SERIES_HOST}',
                    ENABLE_METRICS: 1,
                    STATS_HOST: '127.0.0.1',
                    STATS_PORT: 8125,
                    STATS_PROTOCOL: 'tcp',
                    STATS_TELEGRAF: 1
                  }
                },
                {
                  name: 'sbc-outbound',
                  cwd: '/home/admin/apps/sbc-outbound',
                  script: 'app.js',
                  instance_var: 'INSTANCE_ID',
                  out_file: '/home/admin/.pm2/logs/jambonz-sbc-outbound.log',
                  err_file: '/home/admin/.pm2/logs/jambonz-sbc-outbound.log',
                  exec_mode: 'fork',
                  instances: 1,
                  autorestart: true,
                  watch: false,
                  max_memory_restart: '1G',
                  env: {
                    NODE_ENV: 'production',
                    JAMBONES_LOGLEVEL: 'info',
                    JAMBONES_NETWORK_CIDR: '${VPC_CIDR}',
                    RTPENGINE_PING_INTERVAL: 30000,
                    DRACHTIO_HOST: '127.0.0.1',
                    DRACHTIO_PORT: 9022,
                    DRACHTIO_SECRET: 'cymru',
                    JAMBONES_MYSQL_HOST: '${JAMBONES_MYSQL_HOST}',
                    JAMBONES_MYSQL_USER: '${JAMBONES_MYSQL_USER}',
                    JAMBONES_MYSQL_PASSWORD: '${JAMBONES_MYSQL_PASSWORD}',
                    JAMBONES_MYSQL_DATABASE: 'jambones',
                    JAMBONES_MYSQL_CONNECTION_LIMIT: 10,
                    JAMBONES_REDIS_HOST: '${JAMBONES_REDIS_HOST}',
                    JAMBONES_REDIS_PORT: 6379,
                    JAMBONES_CLUSTER_ID: '${JAMBONES_CLUSTER_ID}',
                    JAMBONES_TIME_SERIES_HOST: '${JAMBONES_TIME_SERIES_HOST}',
                    ENABLE_METRICS: 1,
                    STATS_HOST: '127.0.0.1',
                    STATS_PORT: 8125,
                    STATS_PROTOCOL: 'tcp',
                    STATS_TELEGRAF: 1
                  }
                },
                {
                  name: 'sbc-inbound',
                  cwd: '/home/admin/apps/sbc-inbound',
                  script: 'app.js',
                  instance_var: 'INSTANCE_ID',
                  out_file: '/home/admin/.pm2/logs/jambonz-sbc-inbound.log',
                  err_file: '/home/admin/.pm2/logs/jambonz-sbc-inbound.log',
                  exec_mode: 'fork',
                  instances: 1,
                  autorestart: true,
                  watch: false,
                  max_memory_restart: '1G',
                  env: {
                    NODE_ENV: 'production',
                    JAMBONES_NETWORK_CIDR: '${VPC_CIDR}',
                    JAMBONES_LOGLEVEL: 'info',
                    AWS_REGION: '${AWS_REGION}',
                    DRACHTIO_HOST: '127.0.0.1',
                    DRACHTIO_PORT: 9022,
                    DRACHTIO_SECRET: 'cymru',
                    AWS_SNS_TOPIC_ARM: '${AWS_SNS_TOPIC_ARN}',
                    AWS_SNS_PORT: 3001,
                    JAMBONES_MYSQL_HOST: '${JAMBONES_MYSQL_HOST}',
                    JAMBONES_MYSQL_USER: '${JAMBONES_MYSQL_USER}',
                    JAMBONES_MYSQL_PASSWORD: '${JAMBONES_MYSQL_PASSWORD}',
                    JAMBONES_MYSQL_DATABASE: 'jambones',
                    JAMBONES_MYSQL_CONNECTION_LIMIT: 10,
                    JAMBONES_REDIS_HOST: '${JAMBONES_REDIS_HOST}',
                    JAMBONES_REDIS_PORT: 6379,
                    JAMBONES_CLUSTER_ID: '${JAMBONES_CLUSTER_ID}',
                    JAMBONES_TIME_SERIES_HOST: '${JAMBONES_TIME_SERIES_HOST}',
                    ENABLE_METRICS: 1,
                    STATS_HOST: '127.0.0.1',
                    STATS_PORT: 8125,
                    STATS_PROTOCOL: 'tcp',
                    STATS_TELEGRAF: 1,
                    MS_TEAMS_SIP_PROXY_IPS: '52.114.148.0, 52.114.132.46, 52.114.75.24, 52.114.76.76, 52.114.7.24, 52.114.14.70'
                  }
                },
                {
                  name: 'health-check',
                  cwd: '/home/admin/apps/health-check',
                  script: 'app.js',
                  instance_var: 'INSTANCE_ID',
                  out_file: '/home/admin/.pm2/logs/health-check.log',
                  err_file: '/home/admin/.pm2/logs/health-check.log',
                  exec_mode: 'fork',
                  instances: 1,
                  autorestart: true,
                  watch: false,
                  max_memory_restart: '500M'
                }
                ]
              };
              EOF
              echo "finished writing config file"

              echo "restarting telegraf"
              # configure telegraph to send to the monitoring server
              sudo sed -i -e "s/influxdb:8086/${MONITORING_SERVER_IP}:8086/g"  /etc/telegraf/telegraf.conf
              sudo systemctl restart telegraf

              #If TLS build out certificates from SSM params

              TLS_DOMAIN=$(aws ssm get-parameter --name "jb.tls.domain" --region=${AWS_REGION} | jq -r '.Parameter.Value')
              TLS_KEY=$(aws ssm get-parameter --name "jb.tls.key" --region=${AWS_REGION} | jq -r '.Parameter.Value')
              TLS_CERT=$(aws ssm get-parameter --name "jb.tls.cert" --region=${AWS_REGION} | jq -r '.Parameter.Value')
              TLS_FULLCHAIN=$(aws ssm get-parameter --name "jb.tls.fullchain" --region=${AWS_REGION} | jq -r '.Parameter.Value')

              if [[ "$TLS_KEY" = *"-----BEGIN PRIVATE KEY-----"* ]] && [[ "$TLS_CERT" = *"-----BEGIN CERTIFICATE-----"* ]] && [[ "$TLS_FULLCHAIN" = *"-----BEGIN CERTIFICATE-----"* ]]; then

                #create certificate based on SSM values
                sudo mkdir -p "/etc/certs/$TLS_DOMAIN"
                echo "$TLS_KEY" > "/etc/certs/$TLS_DOMAIN/$TLS_DOMAIN.key"
                echo "$TLS_CERT" > "/etc/certs/$TLS_DOMAIN/$TLS_DOMAIN.crt"
                echo "$TLS_FULLCHAIN" > "/etc/certs/$TLS_DOMAIN/$TLS_DOMAIN.fullchain.crt"

                #update drachtio.conf.xml with newly created certs
                sudo sed -i "/udp-mtu/a \
                  <tls>\n \
                    <key-file>/etc/certs/$TLS_DOMAIN/$TLS_DOMAIN.key</key-file>\n  \
                    <cert-file>/etc/certs/$TLS_DOMAIN/$TLS_DOMAIN.crt</cert-file>\n \
                    <chain-file>/etc/certs/$TLS_DOMAIN/$TLS_DOMAIN.fullchain.crt</chain-file>\n \
                  </tls>\n" /etc/drachtio.conf.xml

                #update drachtio.service add contact for tls
                sudo sed -i '/;transport=tcp/a \ --contact sips:%{LOCAL_IP}:5061;transport=tls --external-ip %{PUBLIC_IP} \'  /etc/systemd/system/drachtio.service
                sudo sed -i '/;transport=tcp/a \ --contact sips:%{LOCAL_IP}:8443;transport=wss --external-ip %{PUBLIC_IP} \'  /etc/systemd/system/drachtio.service
                sudo sed -i -e 's/%/$/g' /etc/systemd/system/drachtio.service
              fi

              # point drachtio server to the HEP endpoint on the monitoring server
              sudo sed -i -e "s/--address 0.0.0.0 --port 9022/--address 0.0.0.0 --port 9022 --homer ${MONITORING_SERVER_IP}:9060 --homer-id 10/g"  /etc/systemd/system/drachtio.service

              echo "restarting drachtio server"
              sudo systemctl daemon-reload
              sudo systemctl restart drachtio

              echo "starting jambonz apps"
              sudo -u admin bash -c "pm2 restart /home/admin/apps/ecosystem.config.js"
              sudo env PATH=$PATH:/usr/bin /usr/lib/node_modules/pm2/bin/pm2 startup systemd -u admin --hp /home/admin
              sudo -u admin bash -c "pm2 save"
              sudo systemctl enable pm2-admin.service

              echo "user data script completed"
            - VPC_CIDR: !Ref VpcCIDR
              AWS_REGION: !Ref AWS::Region
              JAMBONES_MYSQL_HOST: !Ref MySQLURL
              JAMBONES_MYSQL_USER: !Ref MySQLUsername
              JAMBONES_MYSQL_PASSWORD: !Ref MySQLPassword
              JAMBONES_REDIS_HOST: !Ref RedisURL
              JAMBONES_CLUSTER_ID: !Ref Prefix
              MONITORING_SERVER_IP: !GetAtt MonitoringServerEC2.PrivateIp
              AWS_SNS_TOPIC_ARN: !Ref SbcSipServerSNSTopic
              JAMBONES_TIME_SERIES_HOST: !GetAtt MonitoringServerEC2.PrivateIp

  SbcSipServerPlacementGroup:
    Type: AWS::EC2::PlacementGroup
    Properties:
      Strategy: spread

  SbcSipServerAutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AutoScalingGroupName: !Sub '${Prefix}-sbc-sip-autoscaling-group'
      LaunchConfigurationName: !Ref SbcSipConfig
      MinSize: 1
      MaxSize: 4
      DesiredCapacity: 2
      TerminationPolicies:
        - OldestInstance
      VPCZoneIdentifier:
        - !Ref PublicSubnet1CIDR
        - !Ref PublicSubnet2CIDR
      Tags:
        -
          Key: Name
          Value: !Sub '${Prefix}-sip-server'
          PropagateAtLaunch: 'true'
        -
          Key: Environment
          Value: !Sub '${Prefix}-sbc-sip'
          PropagateAtLaunch: 'true'

  SbcSipServerSNSTopic:
    Type: AWS::SNS::Topic
    Properties:
      TopicName: !Sub '${Prefix}-${AWS::Region}-sip-lifecycle-events'

  SbcSipServerSNSPublishRole:
    Type: "AWS::IAM::Role"
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - autoscaling.amazonaws.com
            Action:
              - "sts:AssumeRole"
      ManagedPolicyArns:
        - "arn:aws:iam::aws:policy/service-role/AutoScalingNotificationAccessRole"

  SbcSipServerLifecycleHook:
    Type: AWS::AutoScaling::LifecycleHook
    Properties:
      LifecycleHookName: !Sub '${Prefix}-sip-scale-in'
      AutoScalingGroupName: !Ref SbcSipServerAutoScalingGroup
      LifecycleTransition: "autoscaling:EC2_INSTANCE_TERMINATING"
      NotificationTargetARN: !Ref SbcSipServerSNSTopic
      RoleARN: !GetAtt SbcSipServerSNSPublishRole.Arn


  ###########################################
  #
  #      Feature Instance
  #
  ###########################################
  # --- Feature server EC2 IAM role
  FeatureServerIamRole:
    Type: AWS::IAM::Role
    Properties:
      Description: Feature Server EC2 service role
      RoleName: !Sub '${Prefix}-feature-server-ec2-role'
      AssumeRolePolicyDocument:
        Statement:
          - Effect: Allow
            Principal:
              Service: [ec2.amazonaws.com]
            Action: ['sts:AssumeRole']
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonSNSFullAccess
        - arn:aws:iam::aws:policy/AutoScalingReadOnlyAccess

  # --- Feature server EC2 Role Instance profile
  FeatureServerInstanceProfile:
    Type: 'AWS::IAM::InstanceProfile'
    Properties:
      InstanceProfileName:  !Sub '${Prefix}-feature-server-ec2-role'
      Path: /
      Roles:
        - !Ref FeatureServerIamRole

  FeatureServerConfig:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      ImageId: !Ref FeatureServerAmi
      SecurityGroups:
        - Ref: SshSecurityGroup
        - Ref: FeatureServerSecurityGroup
      InstanceType: !Ref InstanceTypeFeatureServer
      IamInstanceProfile: !Ref FeatureServerInstanceProfile
      KeyName: !Ref KeyName
      AssociatePublicIpAddress: true
      UserData:
        Fn::Base64:
          Fn::Sub:
            - |
              #!/bin/bash -e
              #
              # Cache a bucket name on this host
              echo "running jambonz user data script"
              echo "writing /home/admin/apps/ecosystem.config.js.."

              cat << EOF > /home/admin/apps/ecosystem.config.js
              module.exports = {
              apps : [
              {
                  name: 'jambonz-feature-server',
                  cwd: '/home/admin/apps/jambonz-feature-server',
                  script: 'app.js',
                  instance_var: 'INSTANCE_ID',
                  out_file: '/home/admin/.pm2/logs/jambonz-feature-server.log',
                  err_file: '/home/admin/.pm2/logs/jambonz-feature-server.log',
                  exec_mode: 'fork',
                  instances: 1,
                  autorestart: true,
                  watch: false,
                  max_memory_restart: '1G',
                  env: {
                    NODE_ENV: 'production',
                    ENABLE_METRICS: 1,
                    STATS_HOST: '127.0.0.1',
                    STATS_PORT: 8125,
                    STATS_PROTOCOL: 'tcp',
                    STATS_TELEGRAF: 1,
                    AWS_SNS_TOPIC_ARM: '${AWS_SNS_TOPIC_ARN}',
                    AWS_REGION: '${AWS_REGION}',
                    JAMBONES_NETWORK_CIDR: '${VPC_CIDR}',
                    JAMBONES_MYSQL_HOST: '${JAMBONES_MYSQL_HOST}',
                    JAMBONES_MYSQL_USER: '${JAMBONES_MYSQL_USER}',
                    JAMBONES_MYSQL_PASSWORD: '${JAMBONES_MYSQL_PASSWORD}',
                    JAMBONES_MYSQL_DATABASE: 'jambones',
                    JAMBONES_MYSQL_CONNECTION_LIMIT: 10,
                    JAMBONES_REDIS_HOST: '${JAMBONES_REDIS_HOST}',
                    JAMBONES_REDIS_PORT: 6379,
                    JAMBONES_LOGLEVEL: 'debug',
                    JAMBONES_TIME_SERIES_HOST: '${JAMBONES_TIME_SERIES_HOST}',
                    HTTP_PORT: 3000,
                    AWS_SNS_PORT: 3001,
                    DRACHTIO_HOST: '127.0.0.1',
                    DRACHTIO_PORT: 9022,
                    DRACHTIO_SECRET: 'cymru',
                    JAMBONES_CLUSTER_ID: '${JAMBONES_CLUSTER_ID}',
                    JAMBONES_FEATURE_SERVERS: '127.0.0.1:9022:cymru',
                    JAMBONES_FREESWITCH: '127.0.0.1:8021:JambonzR0ck$',
                    JWT_SECRET: '${JWT_SECRET}'
                  }
                }]
              };
              EOF

              echo "finished writing config file"

              sudo -u admin bash -c "pm2 start /home/admin/apps/ecosystem.config.js"
              sudo env PATH=$PATH:/usr/bin /usr/lib/node_modules/pm2/bin/pm2 startup systemd -u admin --hp /home/admin
              sudo -u admin bash -c "pm2 save"
              sudo systemctl enable pm2-admin.service

              # configure telegraph to send to the monitoring server
              sudo sed -i -e "s/influxdb:8086/${MONITORING_SERVER_IP}:8086/g"  /etc/telegraf/telegraf.conf
              sudo systemctl restart telegraf

              echo "user data script completed"
            - VPC_CIDR: !Ref VpcCIDR
              JAMBONES_MYSQL_HOST: !Ref MySQLURL
              JAMBONES_MYSQL_USER: !Ref MySQLUsername
              JAMBONES_MYSQL_PASSWORD: !Ref MySQLPassword
              JAMBONES_REDIS_HOST: !Ref RedisURL
              AWS_SNS_TOPIC_ARN: !Ref FeatureServerSNSTopic
              AWS_REGION: !Ref AWS::Region
              JAMBONES_CLUSTER_ID: !Ref Prefix
              MONITORING_SERVER_IP: !GetAtt MonitoringServerEC2.PrivateIp
              JAMBONES_TIME_SERIES_HOST: !GetAtt MonitoringServerEC2.PrivateIp
              JWT_SECRET: !Ref EncryptionSecret

  FeatureServerPlacementGroup:
    Type: AWS::EC2::PlacementGroup
    Properties:
      Strategy: spread

  FeatureServerAutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AutoScalingGroupName: !Sub '${Prefix}-feature-server-autoscaling-group'
      LaunchConfigurationName: !Ref FeatureServerConfig
      MinSize: 1
      MaxSize: 2
      DesiredCapacity: 1
      TerminationPolicies:
        - OldestInstance
      VPCZoneIdentifier:
        - !Ref PublicSubnet1CIDR
        - !Ref PublicSubnet2CIDR
      Tags:
        -
          Key: Name
          Value: !Sub '${Prefix}-feature-server'
          PropagateAtLaunch: 'true'

  FeatureServerSNSTopic:
    Type: AWS::SNS::Topic
    Properties:
      TopicName: !Sub '${Prefix}-${AWS::Region}-fs-lifecycle-events'

  FeatureServerSNSPublishRole:
    Type: "AWS::IAM::Role"
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - autoscaling.amazonaws.com
            Action:
              - "sts:AssumeRole"
      ManagedPolicyArns:
        - "arn:aws:iam::aws:policy/service-role/AutoScalingNotificationAccessRole"

  FeatureServerLifecycleHook:
    Type: AWS::AutoScaling::LifecycleHook
    Properties:
      LifecycleHookName: !Sub '${Prefix}-fs-scale-in'
      AutoScalingGroupName: !Ref FeatureServerAutoScalingGroup
      LifecycleTransition: "autoscaling:EC2_INSTANCE_TERMINATING"
      NotificationTargetARN: !Ref FeatureServerSNSTopic
      RoleARN: !GetAtt FeatureServerSNSPublishRole.Arn


  ###########################################
  #
  #      SBC RTP Instance
  #
  ###########################################
  # --- Feature server EC2 IAM role
  SbcRTPServerIamRole:
    Type: AWS::IAM::Role
    Properties:
      Description: SBC RTP EC2 service role
      RoleName: !Sub '${Prefix}-sbc-rtp-ec2-role'
      AssumeRolePolicyDocument:
        Statement:
          - Effect: Allow
            Principal:
              Service: [ec2.amazonaws.com]
            Action: ['sts:AssumeRole']
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonSNSFullAccess
        - arn:aws:iam::aws:policy/AutoScalingReadOnlyAccess

  # --- Feature server EC2 Role Instance profile
  SbcRTPServerInstanceProfile:
    Type: 'AWS::IAM::InstanceProfile'
    Properties:
      InstanceProfileName:  !Sub '${Prefix}-sbc-rtp-ec2-role'
      Path: /
      Roles:
        - !Ref SbcRTPServerIamRole

  SbcRTPConfig:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      ImageId: !Ref RtpServerAmi
      SecurityGroups:
        - Ref: SshSecurityGroup
        - Ref: SbcRTPSecurityGroup
      InstanceType: !Ref InstanceTypeSbcRtp
      IamInstanceProfile: !Ref SbcRTPServerInstanceProfile
      KeyName: !Ref KeyName
      AssociatePublicIpAddress: true
      UserData:
        Fn::Base64:
          Fn::Sub:
            - |
              #!/bin/bash
              echo "writing /home/admin/apps/ecosystem.config.js.."
              cat << EOF > /home/admin/apps/ecosystem.config.js
              module.exports = {
                apps : [
                {
                  name: 'sbc-rtpengine-sidecar',
                  cwd: '/home/admin/apps/sbc-rtpengine-sidecar',
                  script: 'app.js',
                  instance_var: 'INSTANCE_ID',
                  out_file: '/home/admin/.pm2/logs/jambonz-sbc-rtpengine-sidecar.log',
                  err_file: '/home/admin/.pm2/logs/jambonz-sbc-rtpengine-sidecar.log',
                  exec_mode: 'fork',
                  instances: 1,
                  autorestart: true,
                  watch: false,
                  max_memory_restart: '1G',
                  env: {
                    NODE_ENV: 'production',
                    LOGLEVEL: 'info',
                    RTPENGINE_DTMF_LOG_PORT: 22223,
                    AWS_SNS_TOPIC_ARM: '${AWS_SNS_TOPIC_ARN}',
                    AWS_REGION: '${AWS_REGION}',
                    JAMBONES_CLUSTER_ID: '${JAMBONES_CLUSTER_ID}',
                    JAMBONES_REDIS_HOST: '${JAMBONES_REDIS_HOST}',
                    JAMBONES_REDIS_PORT: 6379,
                    AWS_SNS_PORT: 3001,
                    ENABLE_METRICS: 1,
                    STATS_HOST: '127.0.0.1',
                    STATS_PORT: 8125,
                    STATS_PROTOCOL: 'tcp',
                    STATS_TELEGRAF: 1
                  }
                }
                ]
              };
              EOF
              echo "finished writing config file"
              sudo -u admin bash -c "pm2 start /home/admin/apps/ecosystem.config.js"
              sudo env PATH=$PATH:/usr/bin /usr/lib/node_modules/pm2/bin/pm2 startup systemd -u admin --hp /home/admin
              sudo -u admin bash -c "pm2 save"
              sudo systemctl enable pm2-admin.service

              # configure telegraph to send to the monitoring server
              sudo sed -i -e "s/influxdb:8086/${MONITORING_SERVER_IP}:8086/g"  /etc/telegraf/telegraf.conf
              sudo systemctl restart telegraf

              # point rtpengine to the HEP endpoint on the monitoring server
              sudo sed -i -e "s/--delete-delay 0/--delete-delay 0 --homer=${MONITORING_SERVER_IP}:9060 --homer-protocol=udp --homer-id=11/g"  /etc/systemd/system/rtpengine.service
              sudo systemctl daemon-reload
              sudo sytemctl restart rtpengine
            - VPC_CIDR: !Ref VpcCIDR
              AWS_REGION: !Ref AWS::Region
              JAMBONES_MYSQL_HOST: !Ref MySQLURL
              JAMBONES_MYSQL_USER: !Ref MySQLUsername
              JAMBONES_MYSQL_PASSWORD: !Ref MySQLPassword
              JAMBONES_CLUSTER_ID: !Ref Prefix
              JAMBONES_REDIS_HOST: !Ref RedisURL
              AWS_SNS_TOPIC_ARN: !Ref SbcRTPServerSNSTopic
              MONITORING_SERVER_IP: !GetAtt MonitoringServerEC2.PrivateIp

  SbcRTPServerPlacementGroup:
    Type: AWS::EC2::PlacementGroup
    Properties:
      Strategy: spread

  SbcRTPServerAutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AutoScalingGroupName: !Sub '${Prefix}-sbc-rtp-autoscaling-group'
      LaunchConfigurationName: !Ref SbcRTPConfig
      MinSize: 1
      MaxSize: 4
      DesiredCapacity: 1
      TerminationPolicies:
        - OldestInstance
      VPCZoneIdentifier:
        - !Ref PublicSubnet1CIDR
        - !Ref PublicSubnet2CIDR
      Tags:
        -
          Key: Name
          Value: !Sub '${Prefix}-rtp-server'
          PropagateAtLaunch: 'true'

  SbcRTPServerSNSTopic:
    Type: AWS::SNS::Topic
    Properties:
      TopicName: !Sub '${Prefix}-${AWS::Region}-rtp-lifecycle-events'

  SbcRTPServerSNSPublishRole:
    Type: "AWS::IAM::Role"
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - autoscaling.amazonaws.com
            Action:
              - "sts:AssumeRole"
      ManagedPolicyArns:
        - "arn:aws:iam::aws:policy/service-role/AutoScalingNotificationAccessRole"

  SbcRTPServerLifecycleHook:
    Type: AWS::AutoScaling::LifecycleHook
    Properties:
      LifecycleHookName: !Sub '${Prefix}-rtp-scale-in'
      AutoScalingGroupName: !Ref SbcRTPServerAutoScalingGroup
      LifecycleTransition: "autoscaling:EC2_INSTANCE_TERMINATING"
      NotificationTargetARN: !Ref SbcRTPServerSNSTopic
      RoleARN: !GetAtt SbcRTPServerSNSPublishRole.Arn


  ###########################################
  #
  #      WebServer Instance
  #
  ###########################################

  # --- Web server EC2 IAM role
  WebServerIamRole:
    Type: AWS::IAM::Role
    Properties:
      Description: Webserver EC2 service role
      RoleName: !Sub '${Prefix}-webserver-ec2-role'
      AssumeRolePolicyDocument:
        Statement:
          - Effect: Allow
            Principal:
              Service: [ec2.amazonaws.com]
            Action: ['sts:AssumeRole']
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonEC2FullAccess
        - arn:aws:iam::aws:policy/AutoScalingReadOnlyAccess

  # --- Webserver EC2 Role Instance profile
  WebServerInstanceProfile:
    Type: 'AWS::IAM::InstanceProfile'
    Properties:
      InstanceProfileName:  !Sub '${Prefix}-webserver-ec2-role'
      Path: /
      Roles:
        - !Ref WebServerIamRole

  WebServerConfig:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      ImageId: !Ref WebServerAmi
      SecurityGroups:
        - Ref: SshSecurityGroup
        - Ref: WebserverSecurityGroup
      IamInstanceProfile: !Ref WebServerInstanceProfile
      InstanceType: !Ref InstanceTypeWebserver
      KeyName: !Ref KeyName
      AssociatePublicIpAddress: true
      UserData:
        Fn::Base64:
          Fn::Sub:
            - |
              #!/bin/bash
              PRE_PUBLIC_IP=`curl -s http://169.254.169.254/latest/meta-data/public-ipv4`
              echo "before retrieving EIP for web server, public IP is $PRE_PUBLIC_IP"

              /usr/local/bin/auto-assign-elastic-ip.sh
              sleep 15

              PUBLIC_IP=`curl -s http://169.254.169.254/latest/meta-data/public-ipv4`
              echo "after retrieving EIP for web server, public IP is $PUBLIC_IP"

              echo "running jambonz webserver user data script"

              # jambonz webapp
              echo "building webapp.."
              echo "REACT_APP_API_BASE_URL=http://$PUBLIC_IP/api/v1" > /home/admin/apps/jambonz-webapp/.env.local
              echo "REACT_APP_SERVICE_PROVIDER_SID=2708b1b3-2736-40ea-b502-c53d8396247f" >> /home/admin/apps/jambonz-webapp/.env.local

              cd  /home/admin/apps/jambonz-webapp/
              npm run build

              echo "writing /home/admin/apps/ecosystem.config.js.."
              cat << EOF > /home/admin/apps/ecosystem.config.js
              module.exports = {
                apps : [
                {
                  name: 'jambonz-api-server',
                  cwd: '/home/admin/apps/jambonz-api-server',
                  script: 'app.js',
                  out_file: '/home/admin/.pm2/logs/jambonz-api-server.log',
                  err_file: '/home/admin/.pm2/logs/jambonz-api-server.log',
                  combine_logs: true,
                  instance_var: 'INSTANCE_ID',
                  exec_mode: 'fork',
                  instances: 1,
                  autorestart: true,
                  watch: false,
                  max_memory_restart: '1G',
                  env: {
                    NODE_ENV: 'production',
                    JAMBONES_MYSQL_HOST: '${JAMBONES_MYSQL_HOST}',
                    JAMBONES_MYSQL_USER: '${JAMBONES_MYSQL_USER}',
                    JAMBONES_MYSQL_PASSWORD: '${JAMBONES_MYSQL_PASSWORD}',
                    JAMBONES_MYSQL_DATABASE: 'jambones',
                    JAMBONES_MYSQL_CONNECTION_LIMIT: 10,
                    JAMBONES_REDIS_HOST: '${JAMBONES_REDIS_HOST}',
                    JAMBONES_REDIS_PORT: 6379,
                    JAMBONES_LOGLEVEL: 'info',
                    JAMBONE_API_VERSION: 'v1',
                    AWS_REGION: '${AWS_REGION}',
                    JAMBONES_CLUSTER_ID: '${JAMBONES_CLUSTER_ID}',
                    JAMBONES_TIME_SERIES_HOST: '${JAMBONES_TIME_SERIES_HOST}',
                    ENABLE_METRICS: 1,
                    STATS_HOST: '127.0.0.1',
                    STATS_PORT: 8125,
                    STATS_PROTOCOL: 'tcp',
                    STATS_TELEGRAF: 1,
                    HTTP_PORT:  3000,
                    JWT_SECRET: '${JWT_SECRET}'
                    },
                },
                {
                  name: 'jambonz-webapp',
                  script: 'npm',
                  cwd: '/home/admin/apps/jambonz-webapp',
                  args: 'run serve'
                },
                {
                  name: 'public-apps',
                  cwd: '/home/admin/apps/public-apps',
                  script: 'app.js',
                  out_file: '/home/admin/.pm2/logs/public-apps',
                  err_file: '/home/admin/.pm2/logs/public-apps',
                  combine_logs: true,
                  instance_var: 'INSTANCE_ID',
                  exec_mode: 'fork',
                  instances: 1,
                  autorestart: true,
                  watch: false,
                  max_memory_restart: '1G',
                  env: {
                    NODE_ENV: 'production',
                    LOGLEVEL: 'info',
                    NRC_TIME_SERVICE_DID: '+16137451576'
                  }
                }]
              };
              EOF

              echo "finished writing config file"

              sudo -u admin bash -c "pm2 start /home/admin/apps/ecosystem.config.js"
              sudo env PATH=$PATH:/usr/bin /usr/lib/node_modules/pm2/bin/pm2 startup systemd -u admin --hp /home/admin
              sudo -u admin bash -c "pm2 save"
              sudo systemctl enable pm2-admin.service

              # configure telegraph to send to the monitoring server
              sudo sed -i -e "s/influxdb:8086/${MONITORING_SERVER_IP}:8086/g"  /etc/telegraf/telegraf.conf
              sudo systemctl restart telegraf

              # configure nginx for homer and grafana on the monitoring server
              sudo cat << EOF > /etc/nginx/sites-available/default
              server {
                  listen 80;
                  server_name _;
                  location /api/ {
                      rewrite ^/api/(.*)$ /\$1 break;
                      proxy_pass http://localhost:3000;
                      proxy_set_header Host \$host;
                  }
                  location / {
                      proxy_pass http://localhost:3001;
                      proxy_set_header Host \$host;
                  }
              }
              server {
                listen 80;
                server_name grafana.your_domain.com;
                location / {
                  proxy_pass http://${MONITORING_SERVER_IP}:3000;
                  proxy_http_version 1.1;
                  proxy_set_header Upgrade \$http_upgrade;
                  proxy_set_header Connection 'upgrade';
                  proxy_set_header Host \$host;
                  proxy_cache_bypass \$http_upgrade;
                }
              }
              server {
                listen 80;
                server_name homer.your_domain.com;
                location / {
                  proxy_pass http://${MONITORING_SERVER_IP}:9080;
                  proxy_http_version 1.1;
                  proxy_set_header Upgrade \$http_upgrade;
                  proxy_set_header Connection 'upgrade';
                  proxy_set_header Host \$host;
                  proxy_cache_bypass \$http_upgrade;
                }
              }
              EOF

              sudo systemctl restart nginx

              echo "webserver user data script completed"
            - VPC_CIDR: !Ref VpcCIDR
              JAMBONES_MYSQL_HOST: !Ref MySQLURL
              JAMBONES_MYSQL_USER: !Ref MySQLUsername
              JAMBONES_MYSQL_PASSWORD: !Ref MySQLPassword
              JAMBONES_REDIS_HOST: !Ref RedisURL
              JAMBONES_CLUSTER_ID: !Ref Prefix
              MONITORING_SERVER_IP:  !GetAtt MonitoringServerEC2.PrivateIp
              AWS_REGION: !Ref AWS::Region
              JAMBONES_TIME_SERIES_HOST: !GetAtt MonitoringServerEC2.PrivateIp
              JWT_SECRET: !Ref EncryptionSecret

  WebServerPlacementGroup:
    Type: AWS::EC2::PlacementGroup
    Properties:
      Strategy: spread

  WebServerAutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AutoScalingGroupName: !Sub '${Prefix}-webserver-autoscaling-group'
      LaunchConfigurationName: !Ref WebServerConfig
      MinSize: 1
      MaxSize: 1
      DesiredCapacity: 1
      TerminationPolicies:
        - OldestInstance
      VPCZoneIdentifier:
        - !Ref PublicSubnet1CIDR
        - !Ref PublicSubnet2CIDR
      Tags:
        -
          Key: Name
          Value: !Sub '${Prefix}-webserver'
          PropagateAtLaunch: 'true'
        -
          Key: Environment
          Value: !Sub '${Prefix}-webserver'
          PropagateAtLaunch: 'true'
